--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -22,7 +22,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
+                        <a class="nav-link" th:href="@{/}">
+                            <span th:text="#{nav.home}"></span>
+                        </a>
                     </li>
 
                     <li class="nav-item dropdown">
