--- a/src/main/resources/templates/operation/deposit.html
+++ b/src/main/resources/templates/operation/deposit.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title th:text="#{title.operation.deposit}"></title>
+        <title th:text="#{operation.deposits}"></title>
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/main.css}">
@@ -67,34 +67,39 @@
             <div class="row row-center">
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
+
+                        <!--Title-->
                         <div class="title-container">
                             <i class="fas fa-wallet avatar"></i>
-                            <h2 th:text="#{title.operation.deposit}"></h2>
+                            <h2>
+                                <span th:text="#{operation.deposits.in} + ' '"></span>
+                                <span class="badge badge-success" th:text="#{app.name}"></span>
+                            </h2>
                         </div>
                         <div class="card smooth-shadow">
                             <div class="card-header">
                                 <ul class="nav nav-pills card-header-pills">
 
-                                    <!--Credit-->
+                                    <!--All-->
                                     <li class="nav-item">
-                                        <a id="btn-all-credit-tab" class="nav-link active" href="#"
-                                           onclick="showAllCreditTab()">
-                                            <span th:text="#{operation.credit}"></span>
+                                        <a id="btn-all-deposit-tab" class="nav-link active" href="#"
+                                           onclick="showAllDepositTab()">
+                                            <span th:text="#{operation.deposit.all}"></span>
                                         </a>
                                     </li>
 
-                                    <!--Deposit-->
+                                    <!--Create-->
                                     <li class="nav-item">
-                                        <a id="btn-create-credit-tab" class="nav-link" href="#"
-                                           onclick="showCreateCreditTab()">
-                                            <span th:text="#{operation.deposit}"></span>
+                                        <a id="btn-create-deposit-tab" class="nav-link" href="#"
+                                           onclick="showCreateDepositTab()">
+                                            <span th:text="#{operation.deposit.create}"></span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
 
-                            <!--Credit-tab-->
-                            <div id="all-credit-tab" class="card-body card-info">
+                            <!--Deposit-all-tab-->
+                            <div id="all-deposit-tab" class="card-body card-info">
                                 <div class="user-info">
                                     <section>
 
@@ -115,32 +120,32 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <th:block th:each="activeAccount : ${activeAccounts}">
+                                                <th:block th:each="passiveAccount : ${passiveAccounts}">
                                                     <tr>
-                                                        <td th:text="${activeAccount['id']}"></td>
-                                                        <td th:text="${activeAccount['name']}"></td>
+                                                        <td th:text="${passiveAccount['id']}"></td>
+                                                        <td th:text="${passiveAccount['name']}"></td>
                                                         <td>
-                                                            <a th:href="@{'/worker/' + ${activeAccount['worker'].id}}"
-                                                               th:text="${activeAccount['worker'].name}"></a>
+                                                            <a th:href="@{'/worker/' + ${passiveAccount['worker'].id}}"
+                                                               th:text="${passiveAccount['worker'].name}"></a>
                                                         </td>
                                                         <td>
-                                                            <a th:href="@{'/client/' + ${activeAccount['client'].id}}"
-                                                               th:text="${activeAccount['client'].name}"></a>
+                                                            <a th:href="@{'/client/' + ${passiveAccount['client'].id}}"
+                                                               th:text="${passiveAccount['client'].name}"></a>
                                                         </td>
-                                                        <td th:text="${activeAccount['type']}" class="text-center"></td>
+                                                        <td th:text="${passiveAccount['type']}" class="text-center"></td>
 
-                                                        <td th:text="${#dates.format(activeAccount['dateOfIssue'],
+                                                        <td th:text="${#dates.format(passiveAccount['dateOfIssue'],
                                                         'dd.MM.yyyy')}" class="text-center"></td>
 
-                                                        <td th:text="${activeAccount['value']}" class="text-right"></td>
+                                                        <td th:text="${passiveAccount['value']}" class="text-right"></td>
 
-                                                        <td th:text="${activeAccount['currency'].name}"
+                                                        <td th:text="${passiveAccount['currency'].name}"
                                                             class="text-left"></td>
 
-                                                        <td th:text="${activeAccount['percentage']}"></td>
+                                                        <td th:text="${passiveAccount['percentage']}"></td>
                                                         <td class="text-right">
-                                                            <a th:href="@{'/contract/' + ${activeAccount['contract'].id}}"
-                                                               th:text="${activeAccount['contract'].id}"></a>
+                                                            <a th:href="@{'/contract/' + ${passiveAccount['contract'].id}}"
+                                                               th:text="${passiveAccount['contract'].id}"></a>
                                                         </td>
                                                     </tr>
                                                 </th:block>
@@ -152,16 +157,138 @@
                             </div>
 
                             <!--Deposit-tab-->
-                            <div id="create-credit-tab" class="card-body card-info" style="display: none">
+                            <div id="create-deposit-tab" class="card-body card-info" style="display: none">
                                 <div class="user-info">
+
+                                    <!--Currency-->
                                     <section>
+                                        <h4>
+                                            <i class="fas fa-dollar-sign"></i>
+                                            <span th:text="#{account.currency} + ':'"></span>
+                                        </h4>
 
+                                        <br>
 
-
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="select-currency"
+                                                       th:text="#{label.select.currency} + ':'"></label>
+                                                <select id="select-currency" class="form-control">
+                                                    <th:block th:each="currency : ${currencies}">
+                                                        <option th:value="${currency.id}"
+                                                                th:text="${currency.name}"></option>
+                                                    </th:block>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </section>
+
+                                    <!--Client-->
+                                    <section>
+                                        <h4>
+                                            <i class="fas fa-user"></i>
+                                            <span th:text="#{account.client.name} + ':'"></span>
+                                        </h4>
+
+                                        <br>
+
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="select-client"
+                                                       th:text="#{label.select.client} + ':'"></label>
+                                                <select id="select-client" class="form-control">
+                                                    <th:block th:each="client : ${clients}">
+                                                        <option th:value="${client.id}"
+                                                                th:text="${client.id + '. ' +
+                                                                client.passport.lastName + ' ' +
+                                                                client.passport.firstName + ' ' +
+                                                                client.passport.middleName}"></option>
+                                                    </th:block>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </section>
+
+                                    <hr>
+
+                                    <!--Value-->
+                                    <section>
+                                        <h4>
+                                            <i class="fas fa-calculator"></i>
+                                            <span th:text="#{account.deposit.value} + ':'"></span>
+                                        </h4>
+
+                                        <br>
+
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="number-deposit-value"
+                                                       th:text="#{label.deposit.value} + ':'"></label>
+                                                <input type="number" class="form-control numbers-to-validate"
+                                                       id="number-deposit-value"
+                                                       th:placeholder="#{placeholder.deposit.value}"/>
+                                            </div>
+                                        </div>
+                                    </section>
+
+                                    <!--Percentage-->
+                                    <section>
+                                        <h4>
+                                            <i class="fas fa-calculator"></i>
+                                            <span th:text="#{account.deposit.percent} + ':'"></span>
+                                        </h4>
+
+                                        <br>
+
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="number-deposit-percent"
+                                                       th:text="#{label.deposit.percent} + ':'"></label>
+                                                <input type="number" class="form-control numbers-to-validate"
+                                                       id="number-deposit-percent"
+                                                       th:placeholder="#{placeholder.deposit.percent}"/>
+                                            </div>
+                                        </div>
+                                    </section>
+
+                                    <!--Buttons-->
+                                    <div class="form-row">
+                                        <div class="form-group col-md-8"></div>
+                                        <div class="form-group col-md-4">
+                                            <button class="btn btn-primary btn-custom float-right"
+                                               th:onclick="'saveAccount(' + ${accountType.id} + ')'">
+                                                <span th:text="#{btn.save}"></span>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Error Modal -->
+        <div class="modal fade" id="error-modal" tabindex="-1" role="dialog"
+             aria-labelledby="error-modal-label" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-danger" id="error-modal-label">
+                            <i class="fas fa-exclamation-circle"></i>
+                            <span id="error-modal-title" th:text="#{title.error.oops}"></span>
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <span id="error-modal-body"></span>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">
+                            <span th:text="#{btn.close}"></span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -174,6 +301,7 @@
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
+        <script th:src="@{/js/operation/operationService.js}"></script>
         <script th:src="@{/js/operation/operationController.js}"></script>
     </body>
 </html>
