--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -133,7 +133,7 @@
                                                 <span th:text="#{operation.close.bank.day}"></span>
                                             </h5>
                                             <p class="card-text small" style="min-height: 7vw"
-                                               th:text="#{txt.card.credit.body}"></p>
+                                               th:text="#{txt.card.close.bank.day.body}"></p>
                                             <a th:href="@{/operation/closeBankDay}" class="btn btn-success w-100"
                                                style="border-radius: 50px">
                                                 <i class="fas fa-lock"></i>
