--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -82,7 +82,7 @@
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <i class="fas fa-money-check-alt avatar"></i>
+                            <i class="fas fa-funnel-dollar avatar"></i>
                             <h2>
                                 <span th:text="#{title.operation.in} + ' '"></span>
                                 <span class="badge badge-success" th:text="#{app.name}"></span>
