--- a/src/main/resources/templates/operation/credit.html
+++ b/src/main/resources/templates/operation/credit.html
@@ -222,7 +222,7 @@
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
                                                 <label for="number-deposit-value"
-                                                       th:text="#{label.deposit.value} + ':'"></label>
+                                                       th:text="#{label.credit.value} + ':'"></label>
                                                 <input type="number" class="form-control numbers-to-validate"
                                                        id="number-deposit-value"
                                                        th:placeholder="#{placeholder.deposit.value}"/>
